# warp-ctc

./: -o  .gitignore  CMakeLists.txt  libwarpctc.dylib
include/: ctc.h
src/: WarpCTC.cpp  WarpCTC.h  ctc_entrypoint.cpp
